# guiBase

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
cmake_scripts/: CPM.cmake
example/: CMakeLists.txt
example/src/: example.cpp  exampleLayer.h  exampleLayer.hpp
guiBaseLib/: CMakeLists.txt
guiBaseLib/src/: App.cpp  Logger.cpp  entrypoint.cpp
guiBaseLib/src/guiBase/: App.h  App.hpp  Layer.hpp  Logger.h  Logger.hpp  bit_stuff.h  entrypoint.h  entrypoint.hpp
tests/: AddTest.cmake  CMakeLists.txt  example.cpp
